cmake_minimum_required(VERSION 3.14)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)
ADD_SUBDIRECTORY(src/53._Maximum_Subarray)
#add_executable(LeetCode src/53._Maximum_Subarray/solution.cpp)
#add_executable(LeetCode src/54_Spiral_Matrix/solution.cpp)
add_executable(LeetCode src/80_Remove_Duplicates_from_Sorted_Array_II/solution1.cpp)