cmake_minimum_required(VERSION 3.14)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)
add_executable(main main.cpp)
ADD_SUBDIRECTORY(0-100/53._Maximum_Subarray)
#add_executable(LeetCode 0-100/53._Maximum_Subarray/solution.cpp)
#add_executable(LeetCode 0-100/54_Spiral_Matrix/solution.cpp)
add_executable(LeetCode 0-100/94_Binary_Tree_Inorder_Traversal/solution1.cpp)